# hackthenorthproject2025

./: .gitignore  main.py  pyproject.toml  readme.md  ui.py
alt_backend/: package-lock.json  scraper.ts
backend/: applier.py  integrate.py  jobs_index.faiss  jobs_index.meta.json  jobs_with_scores.json  jobs_with_scores.py  matcher.py  personalizer.py  requirements.txt  scraper.py  scraper_two.py  upload.py  vectorizer.py  waterlooworks_jobs.json
backend/scraper/: scraper.py
backend_javascript/: scraper.ts  waterlooworks_jobs.json
backend_js/: package.json  scraper.ts  tsconfig.json
backend_python/: jobs_with_scores.py  matcher.py  requirements.txt  waterlooworks_jobs.json
config/: config.yaml
llm_relay/: README.md  __init__.py  __main__.py  clients.py
templates/: constraints.txt  cover_letter.tex  resume.tex
unused/: big_matcher.py
